tests/fail/struct.rs
use beerec_variants::Variants;

#[derive(Variants)]
pub struct Struct {
    field: usize,
}

fn main() {}
