tests/fail/struct.stderr
error: Unsupported shape `struct`. Expected enum with no fields.
 --> tests/fail/struct.rs:3:10
  |
3 | #[derive(Variants)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Variants` (in Nightly builds, run with -Z macro-backtrace for more info)
